# d2-net

./: .gitignore  convertPytorchToTRT.py  d2net.py  d2test.py  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
lib/: model_test.py  pyramidNew.py  utils.py
src/d2net/: convertPytorchToTRT.py  d2net.py  d2netServer.py  extract_features.py
src/d2net/lib/: model_test_new.py
