[build-system]
requires = ["setuptools>=42", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
template = "{tag}"

[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''
/(
    .git
  | .mypy_cache
  | .tox
  | .venv
  | venv
  | _build
  | build
  | dist
  | migrations
)/
'''